--- a/app/src/main/res/layout/item_token.xml
+++ b/app/src/main/res/layout/item_token.xml
@@ -3,20 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="15dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="24dp"
-    app:cardElevation="2dp"
+    app:cardElevation="0dp"
     app:strokeWidth="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         android:clickable="false"
-        android:focusable="false">
+        android:focusable="false"
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/issuer_text"
@@ -60,13 +63,13 @@
             android:clickable="false"
             android:focusable="false"
             app:indicatorColor="?attr/colorPrimary"
-            app:trackColor="?attr/colorSurfaceVariant"
-            app:trackThickness="3dp"
+            app:indicatorDirectionCircular="counterclockwise"
+            app:indicatorSize="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:indicatorSize="32dp"
-            app:indicatorDirectionCircular="counterclockwise" />
+            app:trackColor="?attr/colorSurfaceVariant"
+            app:trackThickness="3dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
