--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="Scan QR code"
+        android:text="@string/scan_qr_code"
         android:textColor="?attr/colorOnSurface"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -22,8 +22,8 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_view_camera"
-        android:layout_width="260dp"
-        android:layout_height="260dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         app:cardCornerRadius="38dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
